--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Antony Rone Oliver",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
